--- a/_includes/views/site-brand.html
+++ b/_includes/views/site-brand.html
@@ -1,4 +1,4 @@
 <a class="site-brand-inner" rel="author" href="{{ "/" | relative_url }}">
-  <img class="site-favicon" title="{{ site.title | escape }}" src="{{ site.favicon }}" onerror="this.style.display='none'">
-  {{ site.title | escape }}
+  <img class="site-favicon" title="{{ site.title | escape }}" src="{{ site.favicon }}" onerror="this.style.display='none'" style="width: 60px; height: 60px;">
+  <span style="font-size: 2.5em; font-family: Franchise; letter-spacing: 3px; vertical-align: middle;">{{ site.title | escape }}</span>
 </a>
