--- a/_sass/yat.scss
+++ b/_sass/yat.scss
@@ -4,7 +4,7 @@
 
 // Define defaults for each variable.
 
-$base-font-family: 'Helvetica Neue', 'Helvetica', 'Arial', 'Noto Sans KR', sans-serif, 'Roboto Slab', serif, !default;
+$base-font-family: 'Noto Sans KR', sans-serif, 'Roboto Slab', serif, !default;
 $base-font-size: 14px !default;
 $base-font-weight: 400 !default;
 $small-font-size:  $base-font-size * 0.875 !default;
