--- a/_sass/yat.scss
+++ b/_sass/yat.scss
@@ -1,10 +1,10 @@
 @charset "utf-8";
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR&family=Roboto+Slab&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Chakra+Petch&family=Noto+Sans+KR&family=Roboto+Slab&display=swap');
 // Define defaults for each variable.
 
-$base-font-family: 'Noto Sans KR', sans-serif, 'Roboto Slab', serif, !default;
+$base-font-family: 'Noto Sans KR', 'Chakra Petch' sans-serif, 'Roboto Slab', serif, !default;
 $base-font-size: 14px !default;
 $base-font-weight: 400 !default;
 $small-font-size:  $base-font-size * 0.875 !default;
