--- a/_includes/views/site-brand.html
+++ b/_includes/views/site-brand.html
@@ -1,5 +1,4 @@
 <a class="site-brand-inner" rel="author" href="{{ "/" | relative_url }}">
   <img class="site-favicon" title="{{ site.title | escape }}" src="{{ site.favicon }}" onerror="this.style.display='none'" style="width: 60px; height: 60px;">
-  <span style="font-family: 'Roboto Slab'; font-size: 1.5em; letter-spacing: 2px; text-decoration: underline; text-underline-position: under; vertical-align: middle;">{{ site.title | escape }}</span>
-
+  <span style="font-family: 'Chakra Petch'; font-size: 1.8em; letter-spacing: 2px; vertical-align: middle;">{{ site.title | escape }}</span>
 </a>
