--- a/_sass/yat.scss
+++ b/_sass/yat.scss
@@ -1,7 +1,5 @@
 @charset "utf-8";
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR&family=Roboto+Slab&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Chakra+Petch&family=Noto+Sans+KR&family=Roboto+Slab&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@400;500;700&family=Noto+Sans+KR:wght@400;500;700;800&family=Roboto+Slab&display=swap');
 // Define defaults for each variable.
 
 $base-font-family: 'Noto Sans KR', 'Chakra Petch' sans-serif, 'Roboto Slab', serif, !default;
