--- a/_sass/yat/_base.scss
+++ b/_sass/yat/_base.scss
@@ -14,7 +14,7 @@ dl, dd, ol, ul, figure {
  * Basic styling
  */
 body {
-  font-family: $base-font-family;
+  font-family: "Noto Sans KR", sans-serif;
   font-weight: $base-font-weight;
   font-size: #{$base-font-size};
   font-display: swap;
