--- a/_sass/yat/_layout.scss
+++ b/_sass/yat/_layout.scss
@@ -440,6 +440,8 @@ html {
     overflow-wrap: normal;
     word-wrap: normal;
     word-break: normal;
+    font-size: 17px;
+    line-height: 2.0;
 
     h2 {
       @include relative-font-size(2);
@@ -473,6 +475,7 @@ html {
     img:not(.emoji), svg, iframe {
       display: block;
       max-height: 50vh;
+      margin-left: 0;
     }
 
     h2, h3, h4, h5, h6 {
