--- a/_sass/yat/_layout.scss
+++ b/_sass/yat/_layout.scss
@@ -359,6 +359,7 @@ html {
   .post-tags .post-tag {
     display: inline-block;
     text-decoration: none;
+    font-weight: 600;
     border: 1px solid;
     padding: 2px 4px;
     border-radius: 2px;
@@ -440,8 +441,8 @@ html {
     overflow-wrap: normal;
     word-wrap: normal;
     word-break: normal;
-    font-size: 17px;
-    line-height: 2.0;
+    font-size: 16px;
+    line-height: 1.85;
 
     h2 {
       @include relative-font-size(2);
