Add post images

--- a/_sass/yat/_layout.scss
+++ b/_sass/yat/_layout.scss
@@ -359,6 +359,7 @@ html {
   .post-tags .post-tag {
     display: inline-block;
     text-decoration: none;
+    color: orangered;
     font-weight: 600;
     border: 1px solid;
     padding: 2px 4px;
