--- a/_sass/misc/article-menu.scss
+++ b/_sass/misc/article-menu.scss
@@ -31,6 +31,7 @@
         display: flex;
         padding: 2px 8px;
         color: darken($text-color, 10%);
+        text-decoration: none;
 
         * {
           pointer-events: none;
