--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,4 +17,7 @@
   {%- include extensions/code-highlight.html -%}
   {%- include extensions/photo-swipe.html -%}
   {%- include custom-head.html -%}
+  {% if page.use_math %}
+	{% include mathjax_support.html %}
+  {% endif %}
 </head>
